2012-06-24  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: speed up Timeline and Elements panel rendering
        https://bugs.webkit.org/show_bug.cgi?id=89771

        Reviewed by Yury Semikhatsky.

        I used timeline panel to find unnecessary style operations.

        * inspector/front-end/ElementsTreeOutline.js:
        (WebInspector.ElementsTreeElement.prototype.updateTitle):
        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel.prototype._updateEventDividers):
        (WebInspector.TimelinePanel.prototype._updateFrames):
        (WebInspector.TimelinePanel.prototype.sidebarResized):
        (WebInspector.TimelinePanel.prototype.onResize):
        (WebInspector.TimelinePanel.prototype._onScroll):
        (WebInspector.TimelinePanel.prototype._refresh):
        (WebInspector.TimelinePanel.prototype._refreshRecords):
        (WebInspector.TimelinePanel.prototype._adjustScrollPosition):

2012-06-23  Ryosuke Niwa  <rniwa@webkit.org>

        Inserting nodes is slow due to Node::notifyNodeListsAttributeChanged (20%+)
        https://bugs.webkit.org/show_bug.cgi?id=73853

        Reviewed by Anders Carlsson and Ojan Vafai.

        Invalidate all node lists at document level to avoid having to walk up the DOM tree in the invalidation.
        In particular, this makes appending node O(1) with respect to the depth of the tree in common cases when
        we have node lists somewhere in the tree scope.

        We now invalidate more node lists than we used to but it shouldn't matter much in practice because
        most websites don't add or remove nodes or modify relevant attributes while iterating through node lists.
        The change would also register each node list to document thereby consuming one extra pointer, however,
        this should not have a significant memory impact given we used to do it unintentionally until I fixed it in
        r110797 three months ago.
